# UCSD-CSE230-Project

./: README.md  afp-cwk1.lhs  conn.hs
Connect4/: Connect4.cabal  stack.yaml
Connect4/.stack-work/: stack.sqlite3
Connect4/.stack-work/ghci/f8c142fc/: cabal_macros.h
Connect4/src/: GameLogic.hs  GameLogicEasy.hs  GameLogicHard.hs  GameLogicLarge.hs  GameLogicOne.hs  GameLogicTwo.hs  Main.hs  OnePlayer.hs  OnePlayerEasy.hs  OnePlayerHard.hs  TwoPlayers.hs  TwoPlayersLarge.hs  UnitTest.hs
