name:                Connect4
version:             0.1.0.0
homepage:            https://github.com/markxue6/UCSD-CSE230-Project
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Connect4
  hs-source-dirs:      src
  other-modules:       TwoPlayers
                     , TwoPlayersLarge
                     , GameLogicTwo
                     , GameLogicLarge
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers   >= 0.5.7.1 && < 0.5.8
                     , linear       >= 1.20.6 && < 1.21
                     , random       >= 1.1 && < 2
                     , vty

source-repository head
  type:     git
  location:  https://github.com/markxue6/UCSD-CSE230-Project